syntax = "proto3"; //указываем версию protocol buffers - третью

//Наш сервис будет называться Mailer и содержать два метода - SendPass и RetrievePass
//Оба метода по сути одинаковы, будут принимать сообщения MsgRequest, на которые ответят MsgReply

service User {
    rpc SendPass(MsgRequest) returns (MsgReply) {}
    rpc RetrievePass(MsgRequest) returns (MsgReply) {}
}

//формат данных для сообщения MsgRequest
//первое поле - строка, название to
//второе поле - строка, название code

message MsgRequest {
    string to = 1;
    string code = 2;
}

//формат данных для сообщения MsgReply
//одно поле - булеан, название sent

message MsgReply {
    bool sent = 1;
}
